--- a/src/style.scss
+++ b/src/style.scss
@@ -90,6 +90,19 @@ bg {
   background-position: center;
   background-image: url("./images/bgForm.jpg");
 }
+.getStartedBg1 {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("./images/getStarted//getStartedBg1.png");
+}
+.getStartedBg2 {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("./images/getStarted//getStartedBg2.png");
+}
+
 .parentFormBg {
   background-size: cover;
   background-repeat: no-repeat;
