--- a/src/style.scss
+++ b/src/style.scss
@@ -4,6 +4,46 @@ body {
   overflow-x: hidden;
 }
 
+.animationHero {
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+}
+
+@keyframes appearLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+.leftToRight {
+  animation: appearLeft linear;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+}
+
+@keyframes appearRight {
+  from {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+.rightToLeft {
+  animation: appearRight linear;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+}
+
 .panel {
   min-width: 100vw;
   height: 100vh;
@@ -263,23 +303,6 @@ bg {
   color: transparent;
 }
 
-@keyframes appear {
-  from {
-    opacity: 0;
-    scale: 0.5;
-  }
-  to {
-    opacity: 1;
-    scale: 1;
-  }
-}
-
-.animationHero {
-  animation: appear linear;
-  animation-timeline: view();
-  animation-range: entry 0% cover 40%;
-}
-
 .zoom {
   transition: transform 0.2s; /* Animation */
 }
@@ -321,4 +344,16 @@ bg {
     transparent 25%
   );
   background-size: 0.5rem 0.5rem;
+}
+
+//ANIMATION SECTION
+@keyframes appear {
+  from {
+    opacity: 0;
+    scale: 0.5;
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+  }
 }
