--- a/src/style.scss
+++ b/src/style.scss
@@ -162,6 +162,13 @@ bg {
   background-image: url("./images/serviceProviderBg.jpg");
 }
 
+.internShipBg {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("./images/internShipBg.jpg");
+}
+
 // .scheduleBg {
 //   width: 100%;
 //   background-size: cover;
