--- a/src/style.scss
+++ b/src/style.scss
@@ -108,6 +108,13 @@ bg {
   background-image: url("./images/parentHero.jpg");
 }
 
+.schoolBg {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("./images/school/school\ \(2\).jpg");
+}
+
 .HowItWorksPink {
   background-size: cover;
   background-repeat: no-repeat;
