--- a/src/style.scss
+++ b/src/style.scss
@@ -162,6 +162,13 @@ bg {
   background-image: url("./images/schoolForm.jpg");
 }
 
+.outComesBg {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("./images/school/outcomes.jpg");
+}
+
 .ServiceProviderFormBg {
   background-size: cover;
   background-repeat: no-repeat;
