--- a/src/style.scss
+++ b/src/style.scss
@@ -528,3 +528,11 @@ $animationSpeed: 40s;
     list-style-type: decimal;
   }
 }
+
+.comments {
+  label {
+    font-weight: 700;
+    color: #172554;
+    opacity: 90%;
+  }
+}
