05-08-2024 RP Demo Test

--- a/src/style.scss
+++ b/src/style.scss
@@ -272,7 +272,12 @@ bg {
   background-position: center;
   background-image: url("./images/blog/blogHero/author.jpg");
 }
-
+.bgBlog11 {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("./images/blog/blogHero/eleven.jpg");
+}
 // .scheduleBg {
 //   width: 100%;
 //   background-size: cover;
