--- a/src/style.scss
+++ b/src/style.scss
@@ -79,6 +79,20 @@ bg {
   background-position: center;
   background-image: url("./images/FinalBg.svg");
 }
+// .FooterBg {
+//   width: 100%;
+//   background-size: cover;
+//   background-repeat: no-repeat;
+//   background-position: center;
+//   background-image: url("./images/footer.png");
+// }
+.FooterBg {
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("./images/footerlight.png");
+}
 .HeroBg2 {
   width: 100%;
   background-size: cover;
